# mul_franka

./: README.md  sources.repos
mul_franka_description/: CMakeLists.txt  package.xml
mul_franka_description/meshes/CAD/: Femto_Bolt_Camera_Mount.stp
mul_franka_description/meshes/visual/: Femto_Bolt_Camera_Mount.stl  Panda_RealSenseD435_Camera_Mount.stl
mul_franka_description/robots/: panda_arm.urdf.xacro  panda_femto_bolt_camera_mount.xacro  panda_realsense_d435_camera_mount.xacro
mul_franka_description/srdf/: panda_arm.srdf.xacro
mul_franka_launch/: CMakeLists.txt  package.xml
mul_franka_launch/launch/: bag_play.launch.py  femto.launch.py  franka.launch.py  franka_moveit_camera.launch.py  franka_moveit_realsense.launch.py  moveit.launch.py  realsense.launch.py  record_rgbd.launch.py  rviz.launch.py
mul_franka_launch/rviz/: moveit.rviz
