<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mul_franka_launch</name>
  <version>0.0.0</version>
  <description>launch files for the MUL Franka</description>
  <maintainer email="Christian.Rauch@unileoben.ac.at">Christian Rauch</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch_ros</exec_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>

  <exec_depend>mul_franka_description</exec_depend>
  <exec_depend>franka_moveit_config</exec_depend>
  <exec_depend>franka_gripper</exec_depend>

  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_servo</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>franka_robot_state_broadcaster</exec_depend>

  <exec_depend>control_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
